--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+gym
 torch
 torchvision
 #cudatoolkit==9.2 #not necessary in Colab
@@ -6,7 +7,6 @@ pyparsing
 pillow==6.1
 termcolor
 dm_control
-git+git://github.com/1nadequacy/dmc2gym.git
 tb-nightly
 imageio
 imageio-ffmpeg
